# pagerduty-mirrord-verifier

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
deploy/: verifier.yaml
sample-app/: Dockerfile  README.md
sample-app/app/: __main__.py  _pricing_local.py  checkout.py  pricing.py  server.py
sample-app/k8s/: deployment.yaml  pricing.yaml
sample-app/k8s/monitoring/: alertmanager-values.yaml  prometheus-rule.yaml  servicemonitor.yaml
sample-app/pricing-svc/: Dockerfile  app.py
scenarios/: scenario-1-fix-works-offline.json  scenario-1-fix-works.json  scenario-2-fix-fails.json
src/verifier/: __init__.py  cli.py  engine.py  mirrord_runner.py  models.py  orchestrator.py  poster.py  preview.py  proof_bundle.py  webhook.py
