[project]
name = "mirrord-sre-verifier"
version = "0.1.0"
description = "Reference scaffold: verification engine for AI-SRE suggested fixes, driven by mirrord."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "flask>=3.0.0",
    "kubernetes>=30.1.0",
    # Candidate-side deps the verifier needs to import when running stage 1 with
    # its own Python interpreter. POC-grade coupling; production should install
    # candidate deps into a per-run venv or run the candidate in its image.
    "prometheus_client>=0.21.0",
]

[project.scripts]
verifier = "verifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
